--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -61,7 +61,7 @@
 					<div style="flex:1"><p>{{item.quantity}}</p></div>
 				</div>
 				{%endfor%}
-				<h5>Items:   {{order.get_cart_items}}</h5>
+				<h5><p>Items: {{order.get_cart_items}}</p></h5>
 				<h5>Total: ₹{{ order.get_cart_total|floatformat:2 }}</h5>
 			</div>
 		</div>
